<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_CmdContent" Id="{c6bc7f34-5020-44c7-acb4-834e299ada40}">
    <Declaration><![CDATA[TYPE ST_CmdContent :
STRUCT
	SysTime				: STRING;
	Source				: STRING;
	Command				: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>